Menambah data statistik

--- a/statistik.html
+++ b/statistik.html
@@ -73,7 +73,9 @@
                 </div>
                 <img src="SOURCE/IMG/image-removebg-preview (40) 2.png" alt="dinhub">
             </div>
-            <div class="kotak"></div>
+            <div class="kotak">
+              <img src="SOURCE/IMG/statistik.png" alt="">
+            </div>
         </div>
     </div>
     <script>
